...
                style="@style/title"
                android:text="@string/lbl_welcome" />

            <View style="@style/horizontal_line" />

            <EditText
                android:id="@+id/nusp"
                style="@style/editText"
                android:hint="@string/hint_nusp"
                android:inputType="number" />

            <EditText
                android:id="@+id/password"
                style="@style/editText"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/roles"
...
                android:layout_margin="10dp"
                android:paddingBottom="10dp"
                android:text="@string/auto_connect"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="requestLoginOnServer"
                android:text="@string/btn_login" />

        </LinearLayout>
...
