<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seminar_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/subtitle"
            android:id="@+id/seminar_cardview_id"
            tools:text="1" />

        <View style="@style/horizontal_line" />

        <TextView
            style="@style/title"
            android:id="@+id/seminar_cardview_title"
            tools:text="Teste" />
    </LinearLayout>

</android.support.v7.widget.CardView>
