<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/softGray"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/title"
                android:text="@string/lbl_edit_account" />

            <View style="@style/horizontal_line" />

            <TextView
                android:id="@+id/nusp"
                style="@style/title"
                 />

            <TextView
                style="@style/subtitle"
                android:text="@string/registration_name_subtitle" />

            <EditText
                android:id="@+id/name"
                style="@style/editText"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/subtitle"
                android:text="@string/registration_password_subtitle" />

            <EditText
                android:id="@+id/password"
                style="@style/editText"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/softGray"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="requestUpdateUserOnServer"
                android:text="@string/btn_save" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>